Update process content

--- a/process.html
+++ b/process.html
@@ -32,16 +32,18 @@
 				
 				<nav class="process-nav progress-nav">
 					<ul>
-						<li><a href="#domain"		onclick="$('#domain').animatescroll({padding:180});" 		data-toggle="tooltip" data-placement="bottom" title="Domain"></a></li>
-						<li><a href="#persona"		onclick="$('#persona').animatescroll({padding:180});" 		data-toggle="tooltip" data-placement="bottom" title="Persona"></a></li>
-						<li><a href="#whydesign"	onclick="$('#whydesign').animatescroll({padding:180});" 	data-toggle="tooltip" data-placement="bottom" title="Why Design"></a></li>
-						<li><a href="#research"		onclick="$('#research').animatescroll({padding:180});" 		data-toggle="tooltip" data-placement="bottom" title="Research"></a></li>
-						<li><a href="#wireframe"	onclick="$('#wireframe').animatescroll({padding:180});" 	data-toggle="tooltip" data-placement="bottom" title="Wireframes"></a></li>
-						<li><a href="#prototype"	onclick="$('#prototype').animatescroll({padding:180});" 	data-toggle="tooltip" data-placement="bottom" title="Interactive Prototype"></a></li>
-						<li><a href="#testing"		onclick="$('#testing').animatescroll({padding:180});" 		data-toggle="tooltip" data-placement="bottom" title="User Testing"></a></li>
-						<li><a href="#refinements"	onclick="$('#refinements').animatescroll({padding:180});" 	data-toggle="tooltip" data-placement="bottom" title="Refinements"></a></li>
-						<li><a href="#future"		onclick="$('#future').animatescroll({padding:180});" 		data-toggle="tooltip" data-placement="bottom" title="Future Opportunities"></a></li>
-						<li><a href="#team"			onclick="$('#team').animatescroll({padding:180});" 			data-toggle="tooltip" data-placement="bottom" title="Our Team"></a></li>
+						<li><a href="#domain"		onclick="$('#domain').animatescroll({padding:170});" 		data-toggle="tooltip" data-placement="bottom" title="Domain"></a></li>
+						<li><a href="#persona"		onclick="$('#persona').animatescroll({padding:170});" 		data-toggle="tooltip" data-placement="bottom" title="Persona"></a></li>
+						<li><a href="#whydesign"	onclick="$('#whydesign').animatescroll({padding:170});" 	data-toggle="tooltip" data-placement="bottom" title="Why Design"></a></li>
+						<li><a href="#research"		onclick="$('#research').animatescroll({padding:170});" 		data-toggle="tooltip" data-placement="bottom" title="Research"></a></li>
+						<li><a href="#wireframe"	onclick="$('#wireframe').animatescroll({padding:170});" 	data-toggle="tooltip" data-placement="bottom" title="Wireframes"></a></li>
+						<li><a href="#mockups"		onclick="$('#mockups').animatescroll({padding:170});" 		data-toggle="tooltip" data-placement="bottom" title="Mockups"></a></li>
+						<li><a href="#flowchart"	onclick="$('#flowchart').animatescroll({padding:170});" 	data-toggle="tooltip" data-placement="bottom" title="Interaction Flowchart"></a></li>
+						<li><a href="#prototype"	onclick="$('#prototype').animatescroll({padding:170});" 	data-toggle="tooltip" data-placement="bottom" title="Interactive Prototype"></a></li>
+						<li><a href="#testing"		onclick="$('#testing').animatescroll({padding:170});" 		data-toggle="tooltip" data-placement="bottom" title="User Testing"></a></li>
+						<li><a href="#refinements"	onclick="$('#refinements').animatescroll({padding:170});" 	data-toggle="tooltip" data-placement="bottom" title="Refinements"></a></li>
+						<li><a href="#future"		onclick="$('#future').animatescroll({padding:170});" 		data-toggle="tooltip" data-placement="bottom" title="Future Opportunities"></a></li>
+						<li><a href="#team"			onclick="$('#team').animatescroll({padding:170});" 			data-toggle="tooltip" data-placement="bottom" title="Our Team"></a></li>
 					</ul>
 				</nav>
 
@@ -124,174 +126,249 @@
 				<h1 id="persona">Who is this for?</h1>
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
-					<p>car owners who are curious or want to be experts in maintenance of their cars</p>
-					<img class="img-responsive shadow" src="img/persona.png">
+					<p>Car owners who are curious or want to be experts in maintenance of their cars</p>
+					<a href="img/process/persona.png">
+						<img class="img-responsive shadow" src="img/process/persona.png">
+					</a>
 				</div>
 				<div class="col-md-2"></div>
 			</div>
 		</div>
 	</section>
 
-<!-- 
+<!-- Why design
 	================================================== -->
 	<section class="why-design padding-section">
 		<div class="container">
 			<div class="row text-left">
 				<div class="col-md-4">
-					<h3 id="whydesign">What are we making to solve this problem?</h3>
-					<p>a mobile app that allows users to identify car issues, find tools, and fix it themselves.</p>
+					<h3 id="whydesign">What are we making <br>to solve this problem?</h3>
+					<p>A mobile app that allows users to identify car issues, find tools, and fix it themselves.</p>
 				</div>
 				<div class="col-md-4">
 					<h3>Why this approach?</h3>
-					<p>We are getting rid of this overwhelming process of the diagnostic system by making it more efficient and will help users to get motivated to fix small issues themselves, saving them money and gaining experience.</p>
+					<p>We are reducing the overwhelming process car diagnostics by making it more efficient and as well as help users to get motivated to fix small issues themselves, saving them money and gaining experience.</p>
 				</div>
 				<div class="col-md-4">
-					<h3>How are we approaching this problem?</h3>
+					<h3>How are we approaching <br>this problem?</h3>
 					<p>providing meaningful information to allow them to make informed decisions</p>
-					<p>Identify problems through OBDKey code or by inputting the symptom</p>
-					<p>suggest tools and parts and where to get them</p>
-					<p>easy to understand instructions with videos to accompany every step</p>
-					<p>tone and copy that encourages users that this issue can be done easily</p>
-
+					<p>identifying problems through OBDKey code or by inputting the symptom</p>
+					<p>suggesting tools and parts and where to get them</p>
+					<p>showing easy to understand instructions with videos to accompany every step</p>
+					<p>expressing encouragement through tone and copy that this issue can be done easily</p>
 				</div>
-				
 			</div>
 		</div>
 	</section>
-
 
 <!-- Research
 	================================================== -->
 	<section class="research padding-section">
 		<div class="container">
+			<h1 id="research">Research</h1>
 			<div class="row">
-				<h1 id="research">Research</h1>
+				<div class="col-sm-12 col-md-6 text-left">
+					<h3>What exists?</h3>
+					<ul>
+						<li>OBD key readers for diagnosing the car</li>
+						<li>Software and websites that help you identify the issues</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-6 text-left">
+					<h3>What doesn't exist?</h3>
+					<ul>
+						<li>Software and websites that focus on DIY and use step-by-step instructions</li>
+						<li>A continuous workflow, avoiding the need to switch between interfaces</li>
+						<li>Information about severity and whether users are able to fix it themselves</li>
+						<li>Provide encouragement and motivation to users</li>
+						<li>Evaluation of steps</li>
+					</ul>
+				</div>
 			</div>
-		</div>
+			<hr>
+			<div class="row">
+				<p>We conducted user interviews and online surveys on car owners to gather insights about the workflow of car maintenance and their motivations.</p>
+				<div class="col-sm-12 col-md-4">
+					<img src="img/process/userResearch1.jpg" class="img-responsive" alt="">
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="img/process/userResearch2.jpg" class="img-responsive" alt="">
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="img/process/userResearch3.jpg" class="img-responsive" alt="">
+				</div>
+			</div>
+			<hr>
+			<div class="row">
+				<div class="col-md-12">
+					<p>We identified a three stage user journey: before, during, and after car maintenance</p>
+					<a href="img/process/research-experience-map.png">
+						<img class="img-responsive shadow" src="img/process/research-experience-map.png">
+					</a>
+				</div>
+			</div>
 	</section>
 
-<!-- Research
+<!-- Wireframes
 	================================================== -->
 	<section class="wireframe padding-section">
 		<div class="container">
 			<h1 id="wireframe" class="padding">Wireframes</h1>
 			<div class="row">
 				<div class="col-sm-12 col-md-6">
-					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
-
+					<img src="img/process/ideation.jpg" class="img-responsive" alt="">
 				</div>
 				<div class="col-sm-12 col-md-6">
-					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
+					<img src="img/process/wireframeWB.jpg" class="img-responsive" alt="">
 				</div>			
 			</div>
 			<div class="row padding">
 				<div class="col-sm-12 col-md-6">
-					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
-
+					<img src="img/process/wireframes-04.png" class="img-responsive" alt="">
 				</div>
 				<div class="col-sm-12 col-md-6">
-					<img src="img/process/ideation2.jpg" class="img-responsive" alt="">
+					<img src="img/process/wireframes-09.png" class="img-responsive" alt="">
 				</div>			
 			</div>
 		</div>
 	</section>
 		
-
-
-
-
-<!-- DETAILS 
+<!-- Mockups
 	================================================== -->
-	<section class="detail">
+	<section class="wireframe detail padding-section">
 		<div class="container">
+			<h1 id="mockups" class="padding">Mockups</h1>
 			<div class="row">
-				<div class="col-md-12">
-					<div id="carousel-example-generic-2" class="carousel slide">
-
-						<!-- Wrapper for slides -->
-						<div class="carousel-inner">
-							<div class="item active">
-								<div class="row">
-									<div class="col-sm-12 col-md-offset-1 col-md-6">
-										<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-									</div>
-									<div class="col-sm-12 col-md-5">
-										<div class="app-screenshot">
-											<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 1">
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<div class="row">
-									<div class="col-sm-12 col-md-offset-1 col-md-6">
-										<h1>Sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-									</div>
-									<div class="col-sm-12 col-md-5">
-										<div class="app-screenshot">
-											<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 2">
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<div class="row">
-									<div class="col-sm-12 col-md-offset-1 col-md-6">
-										<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-									</div>
-									<div class="col-sm-12 col-md-5">
-										<div class="app-screenshot">
-											<img src="img/screenshots/onboarding.jpg" class="img-responsive" alt="App Screen 3">
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Indicators -->
-						<ol class="carousel-indicators">
-							<li data-target="#carousel-example-generic-2" data-slide-to="0" class="active"></li>
-							<li data-target="#carousel-example-generic-2" data-slide-to="1"></li>
-							<li data-target="#carousel-example-generic-2" data-slide-to="2"></li>
-						</ol>     
+				<div class="col-sm-12 col-md-4">
+					<p>We developed a style guide to maintain a uniform look across all our screens.</p>
+				</div>
+				<div class="col-sm-12 col-md-8">
+					<a href="img/process/StyleGuide-01.png">
+						<img src="img/process/StyleGuide-01.png" class="img-responsive" alt="">
+					</a>	
+				</div>
+		
+			</div>
+			<div class="row padding">
+				<div class="col-sm-12 col-md-4">
+					<div class="app-screenshot">
+						<img src="img/screenshots/mockup-identify.png" class="img-responsive" alt="App Screen 1">
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<div class="app-screenshot">
+						<img src="img/screenshots/mockup-findtools.png" class="img-responsive" alt="App Screen 1">
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<div class="app-screenshot">
+						<img src="img/screenshots/mockup-fix.png" class="img-responsive" alt="App Screen 1">
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
-
-<!-- FEATURES
+		
+<!-- Interaction Flowchart
 	================================================== -->
-	<section class="features">
+	<section class="flowchart padding-section">
 		<div class="container">
+			<h1 id="flowchart" class="padding">Interaction Flowchart</h1>
 			<div class="row">
-
-				<div class="col-md-4">
-					<div class="circle"><i class="icon-bookmark"></i></div>
-					<h2>Quick &amp; Easy Setup</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<p></p>
+					<a href="img/process/interaction-flowchart.png">
+						<img class="img-responsive shadow" src="img/process/interaction-flowchart.png">
+					</a>
 				</div>
-
-				<div class="col-md-4">
-					<div class="circle"><i class="icon-keypad"></i></div>
-					<h2>Parallax Scrolling</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-				</div>
-
-				<div class="col-md-4">
-					<div class="circle"><i class="icon-like"></i></div>
-					<h2>Responsive Design</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-				</div>
-
+				<div class="col-md-2"></div>
 			</div>
 		</div>
 	</section>
 
+<!-- Interactive Prototype 
+	================================================== -->
+	<section class="prototype domain">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h1 id="prototype">View our Interactive Prototype</h1>
+					<iframe width="424" height="916" src="https://invis.io/SZ54LDA3G" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>	  
+	</section>
+
+<!-- Testing
+	================================================== -->
+	<section class="detail padding-section">
+		<div class="container">
+			<h1 id="testing" class="padding">User Testing</h1>
+			<div class="row">
+				<div class="col-sm-12 col-md-4">
+					<p>Process: usability testing and interview</p>
+					<ul>
+					<li>Think aloud, in-context, post-test questionnaire</li>
+					<li>usability testing</li>
+					<li>navigation confusion between main navigation bar, progress bar,  and hamburger menu</li>
+					<li>interaction in Find Tools workflow was confusing as there was a conflict between toolbox interaction and shopping interaction</li>
+					<li>validated that experts like to skip steps and view all steps at once</li>
+					<li>beginners like to do it step by step to avoid overwhelming</li>
+					<li>app motivated them</li>
+					</ul>
+				</div>
+		
+			</div>
+			<div class="row padding">
+				<div class="col-sm-12 col-md-4">
+					<img src="img/process/testing-1.jpg" class="img-responsive">
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="img/process/testing-2.jpg" class="img-responsive">
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="img/process/testing-3.jpg" class="img-responsive">
+				</div>
+			</div>
+		</div>
+	</section>
+
+<!-- Refinements
+	================================================== -->
+	<section class="refinements why-design padding-section">
+		<div class="container">
+			<div class="row text-left">
+				<div class="col-md-8">
+					<h3 id="refinements">Refinements</h3>
+					<p>iterations after user testing and crit feedback
+emphasize what tools are being used for each step
+fixed navigation bar issue
+removed hamburger menu and consolidated the toolbox and history into the home dashboard to remove the navigation issue and provide meaningful information at a glance
+</p>
+				</div>
+				<div class="col-md-4">
+					<h3>Future Opportunities</h3>
+					<p>expand to other vehicles (boats, motorbikes)</p>
+					<p>explore different types of interaction (motion, voice)</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+<!-- Future
+	================================================== -->
+	<section class="detail padding-section">
+		<div class="container">
+			<h1 id="future" class="padding">Future Opportunities</h1>
+			<div class="row">
+				<div class="col-sm-12 col-md-4">
+					<p>expand to other vehicles (boats, motorbikes)</p>
+					<p>explore different types of interaction (motion, voice)</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 <!-- SOCIAL
 	================================================== -->
@@ -299,7 +376,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Our Team</h2>
+					<h2 id="team">Our Team</h2>
 					<div class="team-members">
 						<div class="profile">
 							<img src="img/profiles/edward.jpg">
