Add back parallax for process

--- a/process.html
+++ b/process.html
@@ -336,21 +336,16 @@
 
 <!-- Refinements
 	================================================== -->
-	<section class="refinements why-design padding-section">
+	<section class="refinements padding-section">
 		<div class="container">
+			<h1 id="refinements">Refinements</h1>
 			<div class="row text-left">
-				<div class="col-md-8">
-					<h3 id="refinements">Refinements</h3>
+				<div class="col-md-8 col-md-offset-2">
 					<p>iterations after user testing and crit feedback
 emphasize what tools are being used for each step
 fixed navigation bar issue
 removed hamburger menu and consolidated the toolbox and history into the home dashboard to remove the navigation issue and provide meaningful information at a glance
 </p>
-				</div>
-				<div class="col-md-4">
-					<h3>Future Opportunities</h3>
-					<p>expand to other vehicles (boats, motorbikes)</p>
-					<p>explore different types of interaction (motion, voice)</p>
 				</div>
 			</div>
 		</div>
@@ -358,11 +353,11 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 
 <!-- Future
 	================================================== -->
-	<section class="detail padding-section">
+	<section class="padding-section">
 		<div class="container">
 			<h1 id="future" class="padding">Future Opportunities</h1>
 			<div class="row">
-				<div class="col-sm-12 col-md-4">
+				<div class="col-md-8 col-md-offset-2">
 					<p>expand to other vehicles (boats, motorbikes)</p>
 					<p>explore different types of interaction (motion, voice)</p>
 				</div>
