--- a/process.html
+++ b/process.html
@@ -374,7 +374,7 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 					<h2 id="team">Our Team</h2>
 					<div class="team-members">
 						<div class="profile">
-							<img src="img/profiles/edward.jpg">
+							<img class="img-responsive" src="img/profiles/edward.jpg">
 							<p>
 								<span class="profile-name">Edward Chen</span>
 								<span class="profile-role">Your role</span>
@@ -382,7 +382,7 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 						</div>
 
 						<div class="profile">
-							<img src="img/profiles/gilbert.jpg">
+							<img class="img-responsive" src="img/profiles/gilbert.jpg">
 							<p>
 								<span class="profile-name">Gilbert Fung</span>
 								<span class="profile-role">Your role</span>
@@ -390,7 +390,7 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 						</div>
 
 						<div class="profile">
-							<img src="img/profiles/eva.jpg">
+							<img class="img-responsive" src="img/profiles/eva.jpg">
 							<p>
 								<span class="profile-name">Eva Li</span>
 								<span class="profile-role">Your role</span>
@@ -398,7 +398,7 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 						</div>
 
 						<div class="profile">
-							<img src="img/profiles/tavan.jpg">
+							<img class="img-responsive" src="img/profiles/tavan.jpg">
 							<p>
 								<span class="profile-name">Tavan Sohi</span>
 								<span class="profile-role">Your role</span>
@@ -417,7 +417,7 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1><a class="link" href="process.html">Go back to home</a></h1>
+					<h1><a class="link" href="index.html">Go back to home</a></h1>
 					<!-- <p class="lead">From inception to implementation</p> -->
 				</div>
 				<div class="col-md-12">
