--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1>Be in control</h1>
-					<p class="lead">save money. learn. be confident.</p> 
+					<p class="lead">save money. learn. fix your car.</p> 
 					<div class="carousel-phone">
 						<div id="carousel-example-generic" class="carousel slide">
 
@@ -144,7 +144,7 @@
 					</div>
 					<div class="col-sm-12 col-md-offset-1 col-md-5 col-md-pull-6">
 						<div class="app-screenshot">
-							<video src="img/screenshots/FindTools.mp4" autoplay loop class="img-responsive" alt="">
+							<video src="img/screenshots/findtools.mp4" autoplay loop class="img-responsive" alt="">
 						</div>
 					</div>
 				</div>
@@ -162,8 +162,8 @@
 					</div>
 					<div class="col-sm-12 col-md-5">
 						<div class="app-screenshot">
-							<video id="fix-beginner" src="img/screenshots/fix_beginner.mp4" autoplay loop class="img-responsive" alt=""></video>
-							<video class="hidden" id="fix-expert" src="img/screenshots/fix_expert.mp4" autoplay loop class="img-responsive" alt=""></video>
+							<video id="fix-beginner" src="img/screenshots/fix-beginner.mp4" autoplay loop class="img-responsive" alt=""></video>
+							<video class="hidden" id="fix-expert" src="img/screenshots/fix-expert.mp4" autoplay loop class="img-responsive" alt=""></video>
 						</div>
 					</div>
 				</div>
