--- a/process.html
+++ b/process.html
@@ -189,13 +189,13 @@
 			<div class="row">
 				<p>We conducted user interviews and online surveys on car owners to gather insights about the workflow of car maintenance and their motivations.</p>
 				<div class="col-sm-12 col-md-4">
-					<img src="img/process/userResearch1.jpg" class="img-responsive" alt="">
+					<img src="img/process/userresearch1.jpg" class="img-responsive" alt="">
 				</div>
 				<div class="col-sm-12 col-md-4">
-					<img src="img/process/userResearch2.jpg" class="img-responsive" alt="">
+					<img src="img/process/userresearch2.jpg" class="img-responsive" alt="">
 				</div>
 				<div class="col-sm-12 col-md-4">
-					<img src="img/process/userResearch3.jpg" class="img-responsive" alt="">
+					<img src="img/process/userresearch3.jpg" class="img-responsive" alt="">
 				</div>
 			</div>
 			<hr>
@@ -244,7 +244,7 @@
 				</div>
 				<div class="col-sm-12 col-md-8">
 					<a href="img/process/StyleGuide-01.png">
-						<img src="img/process/StyleGuide-01.png" class="img-responsive" alt="">
+						<img src="img/process/styleguide-01.png" class="img-responsive" alt="">
 					</a>	
 				</div>
 		
@@ -302,23 +302,22 @@
 
 <!-- Testing
 	================================================== -->
-	<section class="detail padding-section">
+	<section class="padding-section">
 		<div class="container">
 			<h1 id="testing" class="padding">User Testing</h1>
 			<div class="row">
-				<div class="col-sm-12 col-md-4">
-					<p>Process: usability testing and interview</p>
-					<ul>
-					<li>Think aloud, in-context, post-test questionnaire</li>
-					<li>usability testing</li>
-					<li>navigation confusion between main navigation bar, progress bar,  and hamburger menu</li>
-					<li>interaction in Find Tools workflow was confusing as there was a conflict between toolbox interaction and shopping interaction</li>
-					<li>validated that experts like to skip steps and view all steps at once</li>
-					<li>beginners like to do it step by step to avoid overwhelming</li>
-					<li>app motivated them</li>
-					</ul>
+				<div class="col-md-4">
+					<h3>Methodology</h3>
+					<p class="text-left">Methodology: Usability testing and interview</p>
+					<p class="text-left">Think aloud, in-context, post-test questionnaire</p>
 				</div>
-		
+				<div class="col-md-8">
+					<h3>Issues</h3>
+					<p class="text-left">Navigation confusion between main navigation bar, progress bar, and hamburger menu</p>
+					<p class="text-left">Find Tools was confusing as there was a conflict between checking tools for toolbox or for shopping</p>
+					<p class="text-left">Validated that experts like to skip and scan over steps, and that beginners are okay with single step-by-step to avoid overwhelming</p>
+					<p class="text-left">The app motivated them through the interactions in addition to the knowledge of cost and time</p>
+				</div>
 			</div>
 			<div class="row padding">
 				<div class="col-sm-12 col-md-4">
@@ -339,13 +338,10 @@
 	<section class="refinements padding-section">
 		<div class="container">
 			<h1 id="refinements">Refinements</h1>
-			<div class="row text-left">
+			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<p>iterations after user testing and crit feedback
-emphasize what tools are being used for each step
-fixed navigation bar issue
-removed hamburger menu and consolidated the toolbox and history into the home dashboard to remove the navigation issue and provide meaningful information at a glance
-</p>
+					<p>We reiterated our design after performing user testing and receiving feedback from critiques.</p>
+					<p>We recognized a need to emphasize what tools are being used for each step, as well as to clarify the navigation bar by removing the hamburger menu and consolidating the toolbox and history into the home screen, to remove the navigation issue and provide meaningful information at a glance</p>
 				</div>
 			</div>
 		</div>
@@ -355,16 +351,15 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 	================================================== -->
 	<section class="padding-section">
 		<div class="container">
-			<h1 id="future" class="padding">Future Opportunities</h1>
+			<h1 id="future">Future Opportunities</h1>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<p>expand to other vehicles (boats, motorbikes)</p>
-					<p>explore different types of interaction (motion, voice)</p>
+					<p>There are additional opportunities that we could pursue, such as expanding to other vehicles <br>(boats, motorbikes), as well as explore different types of interaction (motion, voice) <br>in a car maintenance environment.</p>
 				</div>
 			</div>
 		</div>
 	</section>
-
+	
 <!-- SOCIAL
 	================================================== -->
 	<section class="social">
@@ -418,7 +413,7 @@ removed hamburger menu and consolidated the toolbox and history into the home da
 			<div class="row">
 				<div class="col-md-12">
 					<h1><a class="link" href="index.html">Go back to home</a></h1>
-					<!-- <p class="lead">From inception to implementation</p> -->
+<!--					<p class="lead"><a href="references.html>References</a></p>-->
 				</div>
 				<div class="col-md-12">
 					<hr />
