--- a/references.html
+++ b/references.html
@@ -1,29 +1,122 @@
-<!doctype html>
-<html class="no-js" lang="">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<title>Ignition - A Car Maintenance App</title>
+	<meta charset="utf-8" />
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
-  
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+<!-- CSS 
+	================================================== -->
+	<!-- Bootstrap 3-->
+	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<!-- Google Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+	<!-- Template Styles -->
+	<!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
+	<!-- <link rel="stylesheet" href="css/main.css"> -->
+	<link href="css/style.css" rel="stylesheet" media="screen">
+	<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>	
 </head>
 <body>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    //   function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    // e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    // e.src='//www.google-analytics.com/analytics.js';
-    // r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    // ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-  </script>
-</body>
-</html>
+<!-- NAVBAR
+	================================================== -->
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" onclick="$('header').animatescroll({padding:71});">
+					<img id="logo" src="img/ignition_logotype_horiz.png" alt="Ignition">
+				</a>
+	
+				<nav class="progress-nav">
+					<ul>
+						<li><a href="#identify" onclick="$('#identify').animatescroll({padding:71});">Identify Problems</a></li>
+						<li><a href="#find" onclick="$('#find').animatescroll({padding:71});">Find Parts and Tools</a></li>
+						<li><a href="#fix"  onclick="$('#fix').animatescroll({padding:71});">Fix it Yourself</a></li>
+					</ul>
+				</nav>
+
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="process.html">Process</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+
+<!-- HEADER
+	================================================== -->	  
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h1>Be in control</h1>
+					<p class="lead">save money. learn. be confident.</p> 
+					<div class="carousel-phone">
+						<div id="carousel-example-generic" class="carousel slide">
+
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner">
+								<div class="item active">
+									<img src="img/screenshots/onboarding.jpg" alt="App Screen 1">
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>	  
+			</div>    
+		</div>
+	</header>
+
+
+<!-- GET IT 
+	================================================== -->
+	<section class="get-it">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h1>References</h1>
+					<ul>
+https://www.behance.net/gallery/11924007/Nexus-5-Mockup-Pack-Free
+https://www.pexels.com/photo/road-mountains-nature-street-4033/
+https://www.google.com/design/icons/
+https://github.com/paolotripodi/Landy-v1.0/
+
+					</ul>
+				</div>
+				<div class="col-md-12">
+					<hr />
+					<ul>
+						<li><a>&copy; 2015 Team Ignition</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+<!-- JAVASCRIPT
+	================================================== -->
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/animatescroll.js"></script>
+	<script src="js/spy.js"></script>
+	<script src="js/scripts.js"></script>
+	<script src="js/retina.min.js"></script>
+
+	</html>
