Update beginner video

--- a/references.html
+++ b/references.html
@@ -91,13 +91,13 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1>References</h1>
-					<ul>
+					<pre>
 https://www.behance.net/gallery/11924007/Nexus-5-Mockup-Pack-Free
 https://www.pexels.com/photo/road-mountains-nature-street-4033/
 https://www.google.com/design/icons/
 https://github.com/paolotripodi/Landy-v1.0/
 
-					</ul>
+					</pre>
 				</div>
 				<div class="col-md-12">
 					<hr />
